<package format="2">
  <name>robo_sim_2d</name>
  <version>1.0.0</version>
  <description>
    A 2D robot simulator for ROS.
  </description>
  <maintainer email="jiangmy@usc.edu">Matthew Jiang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>